--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,21 +12,23 @@ spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.favor-path-extension=true
 spring.mvc.contentnegotiation.media-types.json=application/json;charset=UTF-8
 
+
+
 spring.application.name=brip
 serserver.port=8080
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3307/brip
+spring.datasource.url=jdbc:mariadb://localhost:3307/brip?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=1234
 
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
+
 logging.config=classpath:logback-spring.xml
-
-
 logging.level.org.springframework.web=DEBUG
-logging.level.org.mybatis=TRACE
+logging.level.org.mybatis=DEBUG
+logging.level.com.example.brip=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
